<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".Landing" >

    <item android:id="@+id/action_menu_add"
          android:title="@string/action_menu_add"
          android:icon="@drawable/ic_action_add"
          android:showAsAction="always" />

    <item android:id="@+id/action_menu_more"
          android:title="@string/action_menu_more"
          android:icon="@drawable/ic_action_more"
          android:showAsAction="always">
        <menu>
            <item android:id="@+id/action_"
                  android:title="A Propos..."
                  android:icon="@drawable/ic_action_about"
                  android:showAsAction="always" />

            <item android:id="@+id/action_profile"
                  android:title="@string/profile"
                  android:icon="@drawable/ic_action_profile"
                  android:showAsAction="always" />

            <item android:id="@+id/action_settings"
                  android:title="@string/action_settings"
                  android:icon="@drawable/ic_action_parameters"
                  android:showAsAction="always" />
        </menu>
    </item>
</menu>
