<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/blue"
        android:text="@string/registeronline"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="19sp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/userexist"
        android:gravity="center"
        android:id="@+id/model_newaccount_error"
        android:layout_gravity="center_horizontal"
        android:textSize="12sp"
        android:height="23dp"
        android:background="@color/red"
        android:visibility="gone"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Pour commencer à utiliser notre service vous devez vous connecter."
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"/>

    <EditText
        android:id="@+id/model_newaccount_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:editable="false"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="5dp"
        android:inputType="textPersonName|textNoSuggestions"/>

    <EditText
        android:id="@+id/model_newaccount_mail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:editable="false"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="5dp"
        android:inputType="textEmailAddress|textNoSuggestions"/>

    <EditText
        android:id="@+id/model_newaccount_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="5dp"
        android:fontFamily="sans-serif"
        android:inputType="textPassword|textNoSuggestions" />

    <EditText
        android:id="@+id/model_newaccount_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repassword"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif"
        android:inputType="textPassword|textNoSuggestions" />

</LinearLayout>